--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://iticka.github.io/Google-Gemini-Clone",
+  "homepage": "https://iticka.github.io/gemini-clone/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
